[tool.poetry]
name = "hugo-ext-stats"
version = "2.1.1"
description = "Bot statistics extension for Hugo"
authors = ["Nariman Safiulin <woofilee@gmail.com>"]
license = "MIT"

readme = "README.md"
repository = "https://github.com/Roolat/hugo-ext-stats"

keywords = ["discord", "bot", "hugo", "stats"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Natural Language :: English",
    "Natural Language :: Russian",
    "Operating System :: OS Independent",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

packages = [
    { include = "hugo" },
]

[tool.poetry.dependencies]
python = "^3.6"
"discord.py" = { git = "https://github.com/Rapptz/discord.py.git", branch = "rewrite" }
hugo-core = "^0.7.0"
pendulum = "^2.0"

[tool.black]
line-length = 80
py36 = true
